--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.16",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.20.2",
@@ -18,7 +19,9 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
-    "next": "13.1.6",
+    "classnames": "^2.5.1",
+    "mongodb": "^6.3.0",
+    "next": "^13.5.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
